[gd_scene load_steps=22 format=3 uid="uid://ja6rkwks8rpm"]

[ext_resource type="Texture2D" uid="uid://bgieamhc4q6m2" path="res://assets/ansimuz/sunny-land/spritesheets/frog-jump.png" id="1_jqvi4"]
[ext_resource type="Script" path="res://Enemies/frog.gd" id="1_nx0si"]
[ext_resource type="Texture2D" uid="uid://ohqk1e6otsds" path="res://assets/ansimuz/sunny-land/spritesheets/frog-idle.png" id="2_ep8ql"]
[ext_resource type="Texture2D" uid="uid://q8qliiwv07fm" path="res://assets/ansimuz/sunny-land/spritesheets/enemy-deadth.png" id="3_2xt6t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bgxl"]
size = Vector2(18, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1a7k"]
atlas = ExtResource("1_jqvi4")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxy6c"]
atlas = ExtResource("1_jqvi4")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_om8nh"]
atlas = ExtResource("1_jqvi4")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1j42"]
atlas = ExtResource("3_2xt6t")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7f5m"]
atlas = ExtResource("3_2xt6t")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_45lqe"]
atlas = ExtResource("3_2xt6t")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xreqb"]
atlas = ExtResource("3_2xt6t")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gndm5"]
atlas = ExtResource("3_2xt6t")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcrim"]
atlas = ExtResource("3_2xt6t")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_rayco"]
atlas = ExtResource("2_ep8ql")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_guu84"]
atlas = ExtResource("2_ep8ql")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eujic"]
atlas = ExtResource("2_ep8ql")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5lks"]
atlas = ExtResource("2_ep8ql")
region = Rect2(105, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xga5a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1a7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxy6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om8nh")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1a7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1j42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7f5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45lqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xreqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gndm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcrim")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_rayco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guu84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eujic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5lks")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71kyo"]
size = Vector2(257, 86.6016)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8u37"]
size = Vector2(25.5, 11)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_nx0si")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_5bgxl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_xga5a")
animation = &"Death"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-1, -42.6992)
shape = SubResource("RectangleShape2D_71kyo")
metadata/_edit_lock_ = true

[node name="Death" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Death"]
polygon = PackedVector2Array(-7, -12, -8, -14, -8, -16, -6, -18, -3, -18, -2, -17, -1, -14, -1, -16, 1, -19, 2, -19, 3, -19, 4, -19, 6, -17, 7, -15, 7, -12, 7, -12, 3, -12, -4, -11)

[node name="HurtPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtPlayer"]
position = Vector2(0.25, -5.5)
shape = SubResource("RectangleShape2D_r8u37")
metadata/_edit_lock_ = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="HurtPlayer" to="." method="_on_hurt_player_body_entered"]
